--- a/assets/package.json
+++ b/assets/package.json
@@ -13,6 +13,8 @@
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "babel-loader": "^8.0.0",
+    "bootstrap": "^4.5.0",
+    "bootstrap-vue": "^2.14.0",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.2",
     "mini-css-extract-plugin": "^0.9.0",
